crates/sith_python_parser/src/snapshots/sith_python_parser__lexer__tests__comment_until_windows_eol.snap
---
source: crates/sith_python_parser/src/lexer.rs
expression: comment_until_eol(WINDOWS_EOL)
---
## Tokens
```
[
    (
        Int(
            123,
        ),
        0..3,
    ),
    (
        Comment,
        5..10,
    ),
    (
        Newline,
        10..12,
    ),
    (
        Int(
            456,
        ),
        12..15,
    ),
    (
        Newline,
        15..15,
    ),
]
```
